Load ui configuration and folder structure

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -5,12 +5,21 @@
    "id": "f2a09031",
    "metadata": {},
    "source": [
-    "- __init__ is use to convert that folder into packege so that we can extract the data from tham."
+    "- __init__ is use to convert that folder into packege so that we can extract the data from tham.\n",
+    "- those thigs are appere at forntend are writen in config file\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "dc368e96",
+   "metadata": {},
+   "source": [
+    "- <b>.ini </b>-> similar to ymal, but in .ini file we write as simple text.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5122e27d",
    "metadata": {},
    "source": []
   }
